Bug 43326 - [fortran-dev Regression] dynamic dispatch with CLASS components
Summary: [fortran-dev Regression] dynamic dispatch with CLASS components
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: fortran-dev
: P3 normal
Target Milestone: ---
Assignee: Paul Thomas
URL:
Keywords: wrong-code
Depends on:
Blocks:
 
Reported: 2010-03-10 21:02 UTC by janus
Modified: 2010-04-21 17:09 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2010-04-21 04:53:17


Attachments
Version of fix for fortran-dev (1.30 KB, patch)
2010-04-21 14:29 UTC, Paul Thomas
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description janus 2010-03-10 21:02:30 UTC
Spin-off from PR 43291 comment #10 ...

The following gives the wrong result:

module m1
  type  :: t1
  contains 
    procedure :: sizeof
  end type
contains
  integer function sizeof(a)
    class(t1) :: a
    sizeof = 1
  end function sizeof
end module


module m2
  use m1
  type, extends(t1) :: t2    
  contains
    procedure :: sizeof => sizeof2
  end type
contains
  integer function sizeof2(a)
    class(t2) :: a
    sizeof2 = 2
  end function
end module


module m3
  use m2
  type :: t3
    class(t1), pointer  :: a 
  contains
    procedure :: sizeof => sizeof3
  end type
contains 
  integer function sizeof3(a)
    class(t3) :: a
    sizeof3 = a%a%sizeof()
  end function 
end module

  use m1
  use m2
  use m3
  class(t1), pointer :: a, ptr
  type(t1), target :: x
  type(t2), target :: y
  type(t3) :: z
  a => x
  print *, a%sizeof()
  a => y
  print *, a%sizeof()
  z%a => x
  print *, z%sizeof(), z%a%sizeof()
  z%a => y
  print *, z%sizeof(), z%a%sizeof()

end

gives
           1
           2
           1           1
           2           1

The last line should read
           2           2

of course.
Comment 1 janus 2010-03-10 22:06:27 UTC
Here is a simple-minded patch:

Index: gcc/fortran/resolve.c
===================================================================
--- gcc/fortran/resolve.c       (revision 157366)
+++ gcc/fortran/resolve.c       (working copy)
@@ -5555,6 +5555,8 @@
 gfc_resolve_expr (gfc_expr *e)
 {
   gfc_try t;
+  gfc_typespec ts;
+  gfc_ref *ref = NULL;
 
   if (e == NULL)
     return SUCCESS;
@@ -5584,7 +5586,14 @@
       break;
 
     case EXPR_COMPCALL:
-      if (e->symtree && e->symtree->n.sym->ts.type == BT_CLASS)
+      if (e->symtree)
+       ts = e->symtree->n.sym->ts;
+      for (ref = e->ref; ref; ref = ref->next)
+       {
+         if (ref->type == REF_COMPONENT)
+           ts = ref->u.c.component->ts;
+       }
+      if (ts.type == BT_CLASS)
        t = resolve_class_compcall (e);
       else
        t = resolve_compcall (e, true);


This fixes the test case. Haven't tested for regressions yet.
Comment 2 janus 2010-03-10 22:50:03 UTC
(In reply to comment #1)
> This fixes the test case. Haven't tested for regressions yet.

Regtest was successful.
Comment 3 Paul Thomas 2010-03-12 22:01:11 UTC
Subject: Bug 43326

Author: pault
Date: Fri Mar 12 22:00:52 2010
New Revision: 157411

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=157411
Log:
2010-03-12  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/43291
	PR fortran/43326
	* resolve.c (resolve_compcall): Add new boolean dummy argument
	'class_members'. Only resolve expression at end if false.
	Remove redundant, static variable 'class_object'.
	(check_class_members): Add extra argument to call of
	resolve_compcall.
	(resolve_typebound_function): Renamed resolve_class_compcall.
	Do all the detection of class references here. Correct calls to
	resolve_compcall for extra argument.
	(resolve_typebound_subroutine): resolve_class_typebound_call
	renamed. Otherwise same as resolve_typebound_function.
	(gfc_resolve_expr): Call resolve_typebound_function.
	(resolve_code): Call resolve_typebound_subroutine.

2010-03-12  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/43291
	PR fortran/43326
	* gfortran.dg/dynamic_dispatch_7.f03: New test.

Added:
    trunk/gcc/testsuite/gfortran.dg/dynamic_dispatch_7.f03
Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/resolve.c
    trunk/gcc/testsuite/ChangeLog

Comment 4 Dominique d'Humieres 2010-04-20 12:21:24 UTC
Technically this PR, fixed on trunk but not on fortran-dev, is now a [fortran-dev Regression]. Could it be marked that way?
Comment 5 janus 2010-04-20 12:26:18 UTC
(In reply to comment #4)
> Technically this PR, fixed on trunk but not on fortran-dev, is now a
> [fortran-dev Regression]. Could it be marked that way?

Yes.
Comment 6 Paul Thomas 2010-04-20 18:57:59 UTC
(In reply to comment #5)
> (In reply to comment #4)
> > Technically this PR, fixed on trunk but not on fortran-dev, is now a
> > [fortran-dev Regression]. Could it be marked that way?
> 
> Yes.
> 

Janus and Dominique,

Thanks for the heads up on this - I had completely forgotten this PR.

Cheers

Paul
Comment 7 Dominique d'Humieres 2010-04-20 19:17:23 UTC
> Thanks for the heads up on this - I had completely forgotten this PR.

I was suspecting something like that;-)
Comment 8 Paul Thomas 2010-04-21 04:53:17 UTC
I'll do this one next - assigning to self.

Paul
Comment 9 Paul Thomas 2010-04-21 14:29:11 UTC
Created attachment 20453 [details]
Version of fix for fortran-dev

This hasn been fully bootstrapped but runs gfortran.dg/dynamic*, proc* and class* OK.

Since this is a cut down version of the trunk fix, I will apply the patch as obvious, after bootstrapping and regtesting.

Paul
Comment 10 Paul Thomas 2010-04-21 16:50:14 UTC
Subject: Bug 43326

Author: pault
Date: Wed Apr 21 16:49:28 2010
New Revision: 158613

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=158613
Log:
2010-04-21  Paul Thomas  <pault@gcc.gnu.org>

        PR fortran/43326
        * resolve.c (resolve_typebound_function): Renamed
	resolve_class_compcall.Do all the detection of class references
	here.
        (resolve_typebound_subroutine): resolve_class_typebound_call
        renamed. Otherwise same as resolve_typebound_function.
        (gfc_resolve_expr): Call resolve_typebound_function.
        (resolve_code): Call resolve_typebound_subroutine.

2010-04-21  Paul Thomas  <pault@gcc.gnu.org>

        PR fortran/43326
        * gfortran.dg/dynamic_dispatch_9.f03: New test.


Added:
    branches/fortran-dev/gcc/testsuite/gfortran.dg/dynamic_dispatch_9.f03
Modified:
    branches/fortran-dev/gcc/fortran/ChangeLog.fortran-dev
    branches/fortran-dev/gcc/fortran/resolve.c
    branches/fortran-dev/gcc/testsuite/ChangeLog.fortran-dev

Comment 11 Paul Thomas 2010-04-21 16:51:29 UTC
Fixed on fortran-dev.

Thanks, as usual, for the report, Janus, and thanks for the reminder, Dominique :-)

Paul
Comment 12 Dominique d'Humieres 2010-04-21 17:09:00 UTC
> thanks for the reminder, Dominique

You're welcome!-)

Just another one: modulo spaces(?) gcc/testsuite/gfortran.dg/dynamic_dispatch_7.f03 in trunk and gcc/testsuite/gfortran.dg/dynamic_dispatch_9.f03 in fortran-dev are identical.

It looks like gcc/testsuite/gfortran.dg/dynamic_dispatch_7.f03  in fortran-dev is a trimmed down version to cope with the regression.
Comment 13 Paul Thomas 2010-04-29 19:11:28 UTC
Subject: Bug 43326

Author: pault
Date: Thu Apr 29 19:10:48 2010
New Revision: 158910

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=158910
Log:
2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/43896
	* symbol.c (add_proc_component,copy_vtab_proc_comps): Remove
	initializers for PPC members of the vtabs.

2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42274
	* symbol.c (add_proc_component,add_proc_comps): Correctly set the 'ppc'
	attribute for all PPC members of the vtypes.
	(copy_vtab_proc_comps): Copy the correct interface.
	* trans.h (gfc_trans_assign_vtab_procs): Modified prototype.
	* trans-expr.c (gfc_trans_assign_vtab_procs): Pass the derived type as
	a dummy argument and make sure all PPC members of the vtab are
	initialized correctly.
	(gfc_conv_derived_to_class,gfc_trans_class_assign): Additional argument
	in call to gfc_trans_assign_vtab_procs.
	* trans-stmt.c (gfc_trans_allocate): Ditto.

2010-04-29  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/43326
	* resolve.c (resolve_typebound_function): Renamed
	resolve_class_compcall.Do all the detection of class references
	here.
	(resolve_typebound_subroutine): resolve_class_typebound_call
	renamed. Otherwise same as resolve_typebound_function.
	(gfc_resolve_expr): Call resolve_typebound_function.
	(resolve_code): Call resolve_typebound_subroutine.

2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/43492
	* resolve.c (resolve_typebound_generic_call): For CLASS methods
	pass back the specific symtree name, rather than the target
	name.

2010-04-29  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/42353
	* resolve.c (resolve_structure_cons): Make the initializer of
	the vtab component 'extends' the same type as the component.

2010-04-29  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/42680
	* interface.c (check_interface1): Pass symbol name rather than NULL to
	gfc_compare_interfaces.(gfc_compare_interfaces): Add assert to
	trap MULL. (gfc_compare_derived_types): Revert previous change
	incorporated incorrectly during merge from trunk, r155778.
	* resolve.c (check_generic_tbp_ambiguity): Pass symbol name rather
	than NULL to gfc_compare_interfaces.
	* symbol.c (add_generic_specifics): Likewise.

2010-02-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42353
	* interface.c (gfc_compare_derived_types): Add condition for vtype.
	* symbol.c (gfc_find_derived_vtab): Sey access to private.
	(gfc_find_derived_vtab): Likewise.
	* module.c (ab_attribute): Add enumerator AB_VTAB.
	(mio_symbol_attribute): Use new attribute, AB_VTAB.
	(check_for_ambiguous): Likewise.

2010-04-29  Paul Thomas  <pault@gcc.gnu.org>
	    Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41829
	* trans-expr.c (select_class_proc): Remove function.
	(conv_function_val): Delete reference to previous.
	(gfc_conv_derived_to_class): Add second argument to the call to
	gfc_find_derived_vtab.
	(gfc_conv_structure): Exclude proc_pointer components when
	accessing $data field of class objects.
	(gfc_trans_assign_vtab_procs): New function.
	(gfc_trans_class_assign): Add second argument to the call to
	gfc_find_derived_vtab.
	* symbol.c (gfc_build_class_symbol): Add delayed_vtab arg and
	implement holding off searching for the vptr derived type.
	(add_proc_component): New function.
	(add_proc_comps): New function.
	(add_procs_to_declared_vtab1): New function.
	(copy_vtab_proc_comps): New function.
	(add_procs_to_declared_vtab): New function.
	(void add_generic_specifics): New function.
	(add_generics_to_declared_vtab): New function.
	(gfc_find_derived_vtab): Add second argument to the call to
	gfc_find_derived_vtab. Add the calls to
	add_procs_to_declared_vtab and add_generics_to_declared_vtab.
	* decl.c (build_sym, build_struct): Use new arg in calls to
	gfc_build_class_symbol.
	* gfortran.h : Add vtype bitfield to symbol_attr. Remove the
	definition of struct gfc_class_esym_list. Modify prototypes
	of gfc_build_class_symbol and gfc_find_derived_vtab.
	* trans-stmt.c (gfc_trans_allocate): Add second argument to the
	call to gfc_find_derived_vtab.
	* module.c : Add the vtype attribute.
	* trans.h : Add prototype for gfc_trans_assign_vtab_procs.
	* resolve.c (resolve_typebound_generic_call): Add second arg
	to pass along the generic name for class methods.
	(resolve_typebound_call): The same.
	(resolve_compcall): Use the second arg to carry the generic
	name from the above. Remove the reference to class_esym.
	(check_members, check_class_members, resolve_class_esym,
	hash_value_expr): Remove functions.
	(resolve_class_compcall, resolve_class_typebound_call): Modify
	to use vtable rather than member by member calls.
	(gfc_resolve_expr): Modify second arg in call to
	resolve_compcall.
	(resolve_select_type): Add second arg in call to
	gfc_find_derived_vtab.
	(resolve_code): Add second arg in call resolve_typebound_call.
	(resolve_fl_derived): Exclude vtypes from check for late
	procedure definitions. Likewise for checking of explicit
	interface and checking of pass arg.
	* iresolve.c (gfc_resolve_extends_type_of): Add second arg in
	calls to gfc_find_derived_vtab.
	* match.c (select_type_set_tmp): Use new arg in call to
	gfc_build_class_symbol.
	* trans-decl.c (gfc_get_symbol_decl): Complete vtable if
	necessary.
	* parse.c (endType): Finish incomplete classes.


2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42274
	* gfortran.dg/class_16.f03: New test.

2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42274
	* gfortran.dg/class_15.f03: New.

2010-04-29  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/43326
	* gfortran.dg/dynamic_dispatch_9.f03: New test.

2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/43492
	* gfortran.dg/generic_22.f03 : New test.

2010-04-29  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/42353
	* gfortran.dg/class_14.f03: New test.

2010-04-29  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/42680
	* gfortran.dg/interface_32.f90: New test.

2009-04-29  Paul Thomas  <pault@gcc.gnu.org>
	    Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41829
	* gfortran.dg/dynamic_dispatch_5.f03 : Change to "run".
	* gfortran.dg/dynamic_dispatch_7.f03 : New test.
	* gfortran.dg/dynamic_dispatch_8.f03 : New test.


Added:
    trunk/gcc/testsuite/gfortran.dg/class_14.f03
    trunk/gcc/testsuite/gfortran.dg/class_15.f03
    trunk/gcc/testsuite/gfortran.dg/class_16.f03
    trunk/gcc/testsuite/gfortran.dg/dynamic_dispatch_8.f03
    trunk/gcc/testsuite/gfortran.dg/dynamic_dispatch_9.f03
    trunk/gcc/testsuite/gfortran.dg/generic_22.f03
    trunk/gcc/testsuite/gfortran.dg/interface_32.f90
Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/decl.c
    trunk/gcc/fortran/gfortran.h
    trunk/gcc/fortran/interface.c
    trunk/gcc/fortran/iresolve.c
    trunk/gcc/fortran/match.c
    trunk/gcc/fortran/module.c
    trunk/gcc/fortran/parse.c
    trunk/gcc/fortran/resolve.c
    trunk/gcc/fortran/symbol.c
    trunk/gcc/fortran/trans-decl.c
    trunk/gcc/fortran/trans-expr.c
    trunk/gcc/fortran/trans-stmt.c
    trunk/gcc/fortran/trans.h
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/testsuite/gfortran.dg/dynamic_dispatch_5.f03
    trunk/gcc/testsuite/gfortran.dg/dynamic_dispatch_7.f03