2010-04-21  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/43326
        * resolve.c (resolve_typebound_function): Renamed
	resolve_class_compcall.Do all the detection of class references
	here.
        (resolve_typebound_subroutine): resolve_class_typebound_call
        renamed. Otherwise same as resolve_typebound_function.
        (gfc_resolve_expr): Call resolve_typebound_function.
        (resolve_code): Call resolve_typebound_subroutine.

2010-04-21  Paul Thomas  <pault@gcc.gnu.org>

        PR fortran/43326
        * gfortran.dg/dynamic_dispatch_9.f03: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/fortran-dev@158613 138bc75d-0d04-0410-961f-82ee72b054a4